Content Image Section Done

--- a/index.html
+++ b/index.html
@@ -164,6 +164,101 @@
 
     <!-- Header Part HTML End -->
 
+    <!-- Main Part HTML Start -->
+
+    <main>
+      <!-- Content Img Card Section HTML Start -->
+
+      <section id="Content-img">
+        <div class="content-img-wrapper">
+          <div class="container">
+            <div class="row content-img-card align-items-center">
+              <div class="col-lg-6">
+                <div class="content-img-card-img position-relative">
+                  <img
+                    src="assets/images/curated-dates-img.png"
+                    alt="curated-dates-img"
+                  />
+                  <div class="emoji">
+                    <img
+                      draggable="false"
+                      src="assets/images/emoji.png"
+                      alt="emoji"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="content-img-card-content ps-lg-5">
+                  <h2>Curated Dates</h2>
+                  <p>
+                    Personalized date ideas based on your unique personality: My
+                    Crush analyzes your interests, preferences, and personality
+                    traits to curate date ideas that suit you and your partner.
+                    Whether you're into outdoor adventures, cozy indoor
+                    experiences, or something in between, My Crush has you
+                    covered.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="row content-img-card align-items-center flex-column-reverse flex-lg-row"
+            >
+              <div class="col-lg-6">
+                <div class="content-img-card-content pe-lg-5">
+                  <h2>Love Tank 💋</h2>
+                  <p>
+                    Introducing Love Tank - a revolutionary new feature that
+                    helps you keep your relationship on track. Our app allows
+                    you to check your partner's love tank level and receive
+                    personalized suggestions on how to fill it up. Set custom
+                    notifications to make sure you never miss a chance to show
+                    your love. With Love Tank, maintaining a healthy and happy
+                    relationship has never been easier.
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="content-img-card-img">
+                  <img
+                    src="assets/images/love-tank-img.png"
+                    alt="love-tank-img"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row content-img-card align-items-center">
+              <div class="col-lg-6">
+                <div class="content-img-card-img pe-lg-5">
+                  <img
+                    src="assets/images/memories-img.png"
+                    alt="memories-img"
+                  />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="content-img-card-content">
+                  <h2>Memories</h2>
+                  <p>
+                    Built-in memory bank to help you remember important
+                    anniversaries and milestones: MyCrush keeps track of your
+                    special moments, such as your anniversary, birthdays, and
+                    other important milestones. It sends you reminders so you
+                    can celebrate your relationship and create new memories.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Content Img Card Section HTML End -->
+    </main>
+
+    <!-- Main Part HTML End -->
+
     <!-- Bootstrap JavaScript -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 
