--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyCrush</title>
 
+    <!-- Font Awesome for Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+
+    <!-- Owl Carousel CSS -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -68,7 +78,7 @@
       <!-- Header Section HTML End -->
 
       <section id="Hero">
-        <div class="hero-wrappe">
+        <div class="hero-wrapper">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-6">
@@ -255,12 +265,291 @@
       </section>
 
       <!-- Content Img Card Section HTML End -->
+
+      <!-- Join Us Section HTML Start -->
+
+      <section id="Join-us">
+        <div class="join-us-wrapper position-relative">
+          <div class="container">
+            <div class="join-us-container">
+              <div class="row align-items-center">
+                <div class="col-lg-6">
+                  <div class="join-us-content">
+                    <h2>
+                      <span
+                        >Join Us
+                        <img
+                          class="join-us-border"
+                          src="assets/images/join-us-border.svg"
+                          alt="join-us-border"
+                        />
+                      </span>
+                      and discover the perfect date, every time.
+                    </h2>
+                    <p>
+                      Say goodbye to the boring dinner-and-a-movie routine, and
+                      hello to a world of exciting possibilities.
+                    </p>
+                    <div class="d-none d-lg-block">
+                      <div class="music-icon pt-5 pb-3">
+                        <img
+                          src="assets/images/music-icon.svg"
+                          alt="music-icon"
+                        />
+                      </div>
+                      <p>
+                        With My Crush, you'll get curated date ideas that match
+                        your interests, from adventurous outdoor activities to
+                        cozy indoor experiences.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="join-us-img">
+                    <img
+                      src="assets/images/join-us-img.png"
+                      alt="join-us-img"
+                    />
+                  </div>
+                  <div class="d-lg-none">
+                    <div class="music-icon pt-5 pb-3">
+                      <img
+                        src="assets/images/music-icon.svg"
+                        alt="music-icon"
+                      />
+                    </div>
+                    <p>
+                      With My Crush, you'll get curated date ideas that match
+                      your interests, from adventurous outdoor activities to
+                      cozy indoor experiences.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Join Us Section HTML End -->
+
+      <!-- Team Section HTML Start -->
+
+      <section id="Team">
+        <div class="team-wrapper">
+          <div class="container">
+            <div class="team-container position-relative text-center">
+              <div class="team-img">
+                <img src="assets/images/team-img.png" alt="team-img" />
+              </div>
+              <div class="team-content">
+                <h2>Brian and Charlene Foster</h2>
+                <p>
+                  The husband and wife team behind My Crush. They have been
+                  together since high school and have been happily married since
+                  January 2000. Throughout their journey together, they have
+                  overcome challenges and developed a deep bond built on
+                  friendship, love, and fun. They have a passion for seeing
+                  couples succeed in their relationships and believe that
+                  genuine connection, patient communication, and effective
+                  teamwork are the foundation of a happy relationship. This
+                  passion inspired them to create My Crush, an app that curates
+                  personalized date ideas and helps couples maintain a healthy,
+                  loving relationship.
+                </p>
+                <a href="#">hello@mycrush.io</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Team Section HTML End -->
+
+      <!-- Testimonial Section HTML Start -->
+
+      <section id="Testimonial">
+        <div class="testimonial-wrapper">
+          <div class="container">
+            <div class="testimonial-container">
+              <div class="testimonial-title">
+                <h2>What are Other Couples Saying?</h2>
+                <div class="quote-icon">
+                  <img
+                    draggable="false"
+                    src="assets/images/quote-icon.svg"
+                    alt="quote-icon"
+                  />
+                </div>
+              </div>
+              <div class="testimonial-slider owl-carousel owl-theme">
+                <div class="testimonial-slide item">
+                  <h3>There are many variations of passages of Lorem Ipsum</h3>
+                  <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC, making it over 2000 years old. Richard
+                    McClintock, a Latin professor at Hampden-Sydney College in
+                    Virginia, looked up one of the more obscure Latin words,
+                    consectetur, from a Lorem Ipsum passage, and going through
+                    the cites
+                  </p>
+                  <div class="customer-info d-flex align-items-center pt-2">
+                    <div class="customer-img">
+                      <img
+                        src="assets/images/customer-img1.png"
+                        alt="customer-img1"
+                      />
+                    </div>
+                    <div class="customer-name">
+                      <p>Jenny Wilson & Robert Fox</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-slide item">
+                  <h3>Letraset sheets containing Lorem Ipsum passages</h3>
+                  <p>
+                    It is a long established fact that a reader will be
+                    distracted by the readable content of a page when looking at
+                    its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution of letters, as opposed to
+                    using 'Content here, content here', making it look like
+                    readable English.
+                  </p>
+                  <div class="customer-info d-flex align-items-center pt-2">
+                    <div class="customer-img">
+                      <img
+                        src="assets/images/customer-img2.png"
+                        alt="customer-img2"
+                      />
+                    </div>
+                    <div class="customer-name">
+                      <p>Brooklyn Simmons & Jane Cooper</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonial Section HTML End -->
+
+      <!-- Download App Section HTML Start -->
+
+      <section id="Download-app">
+        <div class="download-app-wrapper">
+          <div class="container">
+            <div class="download-app-container">
+              <div class="row align-items-end">
+                <div class="col-md-8">
+                  <div class="download-app-content">
+                    <h3>Download MyCrush Now</h3>
+                    <p>
+                      And start experiencing a whole new level of connection and
+                      romance in your relationship. With My Crush, the
+                      possibilities are endless, and the love is always in the
+                      air.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="download-sources d-flex">
+                    <a href="#"
+                      ><img
+                        draggable="false"
+                        src="assets/images/app-store-logo-white.svg"
+                        alt="app-store-logo-white"
+                    /></a>
+                    <a href="#" class="p-0"
+                      ><img
+                        draggable="false"
+                        src="assets/images/play-store-logo.svg"
+                        alt="play-store-logo"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Download App Section HTML End -->
     </main>
 
     <!-- Main Part HTML End -->
 
+    <!-- Footer Part HTML Start -->
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="container">
+          <div
+            class="footer-container d-flex justify-content-between align-items-center"
+          >
+            <div class="footer-logo">
+              <img src="assets/images/logo.svg" alt="logo" />
+            </div>
+            <div class="footer-menu d-none d-md-block">
+              <ul class="d-md-flex align-items-center">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">About Us</a></li>
+              </ul>
+            </div>
+            <div class="footer-social">
+              <ul class="d-flex align-items-center">
+                <li>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-github"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-menu d-md-none">
+            <ul class="d-flex justify-content-center align-items-center">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+          <hr />
+          <div
+            class="footer-copyright d-md-flex justify-content-between align-items-center"
+          >
+            <p>© Copyright 2023, All Rights Reserved</p>
+            <div class="footer-privacy">
+              <ul class="d-flex align-items-center">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Footer Part HTML End -->
+
+    <!-- Jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+
     <!-- Bootstrap JavaScript -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Owl Carousel JavaScript -->
+    <script src="assets/js/owl.carousel.min.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
