--- a/index.html
+++ b/index.html
@@ -530,7 +530,9 @@
           >
             <p>© Copyright 2023, All Rights Reserved</p>
             <div class="footer-privacy">
-              <ul class="d-flex align-items-center">
+              <ul
+                class="d-flex justify-content-center justify-content-lg-end align-items-center"
+              >
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms & Conditions</a></li>
               </ul>
