--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section id="Header">
         <nav class="navbar navbar-expand-xl">
           <div class="container">
-            <a class="logo" href="index.html"
+            <a class="logo" href="#Header"
               ><img src="assets/images/logo.svg" alt="logo"
             /></a>
             <button
@@ -53,16 +53,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav pl-md-5 mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#Header">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#Features">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Couples in Love</a>
+                  <a class="nav-link" href="#Testimonial">Couples in Love</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="#About-us">About Us</a>
                 </li>
               </ul>
               <div class="navbar-nav ml-auto">
@@ -179,7 +179,7 @@
     <main>
       <!-- Content Img Card Section HTML Start -->
 
-      <section id="Content-img">
+      <section id="Features">
         <div class="content-img-wrapper">
           <div class="container">
             <div class="row content-img-card align-items-center">
@@ -336,7 +336,7 @@
 
       <!-- Team Section HTML Start -->
 
-      <section id="Team">
+      <section id="About-us">
         <div class="team-wrapper">
           <div class="container">
             <div class="team-container position-relative text-center">
