--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
     <!-- Main Part HTML Start -->
 
     <main>
-      <!-- Content Img Card Section HTML Start -->
+      <!-- Features Section HTML Start -->
 
       <section id="Features">
-        <div class="content-img-wrapper">
+        <div class="features-wrapper">
           <div class="container">
-            <div class="row content-img-card align-items-center">
+            <div class="row features-card align-items-center">
               <div class="col-lg-6">
-                <div class="content-img-card-img position-relative">
+                <div class="features-card-img position-relative">
                   <img
                     src="assets/images/curated-dates-img.png"
                     alt="curated-dates-img"
@@ -199,7 +199,7 @@
                 </div>
               </div>
               <div class="col-lg-6">
-                <div class="content-img-card-content ps-lg-5">
+                <div class="features-card-content ps-lg-5">
                   <h2>Curated Dates</h2>
                   <p>
                     Personalized date ideas based on your unique personality: My
@@ -213,10 +213,10 @@
               </div>
             </div>
             <div
-              class="row content-img-card align-items-center flex-column-reverse flex-lg-row"
+              class="row features-card align-items-center flex-column-reverse flex-lg-row"
             >
               <div class="col-lg-6">
-                <div class="content-img-card-content pe-lg-5">
+                <div class="features-card-content pe-lg-5">
                   <h2>Love Tank 💋</h2>
                   <p>
                     Introducing Love Tank - a revolutionary new feature that
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <div class="col-lg-6">
-                <div class="content-img-card-img">
+                <div class="features-card-img">
                   <img
                     src="assets/images/love-tank-img.png"
                     alt="love-tank-img"
@@ -238,9 +238,9 @@
                 </div>
               </div>
             </div>
-            <div class="row content-img-card align-items-center">
+            <div class="row features-card align-items-center">
               <div class="col-lg-6">
-                <div class="content-img-card-img pe-lg-5">
+                <div class="features-card-img pe-lg-5">
                   <img
                     src="assets/images/memories-img.png"
                     alt="memories-img"
@@ -248,7 +248,7 @@
                 </div>
               </div>
               <div class="col-lg-6">
-                <div class="content-img-card-content">
+                <div class="features-card-content">
                   <h2>Memories</h2>
                   <p>
                     Built-in memory bank to help you remember important
@@ -264,7 +264,7 @@
         </div>
       </section>
 
-      <!-- Content Img Card Section HTML End -->
+      <!-- Features Section HTML End -->
 
       <!-- Join Us Section HTML Start -->
 
@@ -334,16 +334,16 @@
 
       <!-- Join Us Section HTML End -->
 
-      <!-- Team Section HTML Start -->
+      <!-- About-us Section HTML Start -->
 
       <section id="About-us">
-        <div class="team-wrapper">
+        <div class="about-us-wrapper">
           <div class="container">
-            <div class="team-container position-relative text-center">
-              <div class="team-img">
-                <img src="assets/images/team-img.png" alt="team-img" />
+            <div class="about-us-container position-relative text-center">
+              <div class="about-us-img">
+                <img src="assets/images/about-us-img.png" alt="about-us" />
               </div>
-              <div class="team-content">
+              <div class="about-us-content">
                 <h2>Brian and Charlene Foster</h2>
                 <p>
                   The husband and wife team behind My Crush. They have been
@@ -365,7 +365,7 @@
         </div>
       </section>
 
-      <!-- Team Section HTML End -->
+      <!-- About-us Section HTML End -->
 
       <!-- Testimonial Section HTML Start -->
 
