--- a/coming-soon.html
+++ b/coming-soon.html
@@ -52,15 +52,23 @@
             </div>
             <div class="coming-soon-form-container">
               <form>
-                <div
-                  class="coming-soon-form d-flex justify-content-between align-items-center"
-                >
+                <div class="coming-soon-form">
                   <div class="form-input-filed">
                     <input type="email" placeholder="Email" required />
                   </div>
-                  <div class="form-btn-filed">
-                    <input type="submit" value="Send" />
-                  </div>
+                </div>
+                <div class="form-input-filed">
+                  <input type="text" placeholder="Full Name" required />
+                </div>
+                <div class="form-input-filed">
+                  <select>
+                    <option value="Select Country">Select Country</option>
+                    <option value="USA">USA</option>
+                    <option value="BAN">BAN</option>
+                  </select>
+                </div>
+                <div class="form-btn-filed">
+                  <input type="submit" value="Send" />
                 </div>
               </form>
             </div>
